Vendor controller, mapper, service, repository - refactoring